# sieshka

./: .env.example  .gitignore  =0.4.6  DEPLOYMENT.md  DEPLOYMENT.md:Zone.Identifier  Dockerfile  README.md  README.md:Zone.Identifier  alembic.ini  docker-compose.yml  kitchen_inventory_tools.diff:Zone.Identifier  mypy_base.txt  mypy_decoded.txt  pyproject.toml  seed_demo_menu.py  sieshka.geany  unit_all.txt  unit_base.txt  unit_decoded.txt  unit_out.txt
.github/workflows/: ci.yml
app/: config.py  db.py  db_nano.py  main.py  startup.py  telemetry.py  trace.py
app/agents/: README.md  __init__.py  menu_agent.py  order_agent.py  promotion_agent.py  schedule_agent.py  support_agent.py  zone_agent.py
app/llm/: fallback.py  providers.py
app/policy/: __init__.py  policy_snapshot.py
app/programs/: llm_fallback_program.py  menu_agent_program.py  menu_import_program.py  order_agent_program.py  order_programs.py  promotion_agent_program.py  schedule_agent_program.py  support_agent_program.py  zone_agent_program.py
app/repositories/: __init__.py  delivery_repo.py  kitchen_repo.py  narrative_receipt_repo.py  order_repo.py  payment_repo.py
app/services/: __init__.py  customer_service.py  delivery_service.py  idempotency.py  inventory_service.py  kitchen_service.py  menu_import_service.py  menu_service.py  narrative_receipt_service.py  notification_service.py  order_service.py  payment_service.py  promotion_service.py  schedule_service.py  trace_analyzer.py  zone_service.py
app/tools/: __init__.py  inventory_tools.py  kitchen_tools.py  llm_fallback_tools.py  menu_agent_tools.py  menu_import_tools.py  notification_tools.py  order_agent_tools.py  order_tools.py  (+4 more)
data/: categories.json  delivery_zones.json  sieshka_nano_vm.db.locked_bak
deploy/: .env.example.prod  Caddyfile  README.md  backup.sh  deploy.sh  docker-compose.prod.yml  nginx-siesh-ka-online.conf  restore.sh
docs/: AGENTS_SIESHKA.json  ARCHITECTURE.md  CONSTRAINTS.md  DEPLOYMENT.md  SPRINTS_SIESHKA.md  sprint_m1_postgres_wiring.md  storefront_smoke_manual_checklist.md
migrations/: 001_initial_schema.sql  002_narrative_receipt.sql  003_promotions.sql  004_menu.sql  005_customer.sql  006_delivery_zones.sql  007_schedule_windows.sql  008_schedule_windows_effective_date.sql  009_zone_name_unique_index.sql  010_checkout_columns.sql  011_zone_id_uuid.sql  _split_sql.py  env.py
scripts/: _sql_check.py  _zone_check.py  check_no_direct_mutation.sh  import_delivery_zones.py  prepare_products_csv.py  seed_categories.py  validate_all_programs.py
tests/: conftest.py
(+147 files in other folders)
