[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sieshka"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
]

[project.optional-dependencies]
nano = [
    "llm-nano-vm>=0.8.8",
    "nano-vm-mcp>=0.4.6",
    "litellm>=1.40.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "testcontainers>=4.0.0",
    "llm-nano-vm>=0.8.8",
    "nano-vm-mcp>=0.4.6",
    "litellm>=1.40.0",
    "httpx>=0.27.0",
    "opentelemetry-sdk>=1.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
# CI: ruff check only — no --fix (recursive trigger)

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
